[package]
name = "demo"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
litex-pac = { path = "../build/gsd_orangecrab/software/rust/litex-pac" }
